@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-2-7
+DATE: 02/09/2016
+STAFF: sc
+CHANGES: TR12255 mgd/GXD_DupGenotype.py rewrite to include mcl2, header, 
+	collapse all genotype IDs onto one line for a dup genotype
+
 TAG: qcreports_db-6-0-2-6
 TAG: qcreports_db-6-0-2-5
 DATE: 01/26/2015
